# pyerp

./: .gitignore  poetry.toml  pyproject.toml
pyerp/: asgi.py  pagination.py  settings.py  urls.py  views.py  wsgi.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
